--- a/index.html
+++ b/index.html
@@ -10,41 +10,63 @@
 <body>
     <div class="header flexrow">
         <div class="logo">
-            <p>Logo</p>
+            <img class="logo" src="./images/logo/Reservia@3x.png" alt="logo">
         </div>
         <div class="liens flexrow raleway">
-            <p class="hergement">Hébergements</p>
-            <p class="activite">Activités</p>
-            <p class="inscription">S'inscrire</p>
+            <p class="hebergement hover">Hébergements</p>
+            <p class="activite hover">Activités</p>
+            <p class="inscription hover">S'inscrire</p>
         </div>
     </div>
 
     <div class="trouverheber">
-        <p>Trouvez votre hébergement pour des vacances de rêve</p>
-        <p>En plein centre ville ou pleine nature</p>
+        <div class="midtext">
+            <p class="bold">Trouvez votre hébergement pour des vacances de rêve</p>
+            <p>En plein centre ville ou pleine nature</p>
+        </div>
         <div class="recherche flexrow">
-            <div class="icone">logo</div>
-            <div class="input">input</div>
-            <div class="bouton">bouton</div>
+            <div class="rech flexrow">
+                <div class="icone"><img class="loc" src="./images/png-clipart-computer-icons-location-google-maps-location-icon-black-map.png" alt=""></div>
+                <input class="input" type="text">
+                <button class="btn">Rechercher</button>
+            </div>
         </div>
     </div>
 
 
     <div class="filtre">
     <p class="raleway">Filtres</p>
-    <div class="economique"></div>
-    <div class="familial"></div>
-    <div class="romantique"></div>
-    <div class="animauxautorises"></div>
+    <div class="economique filtrebordure flexrow">
+        <div class="logofiltre">Logo</div>
+        <p class="textfiltre">Economique</p>
+    </div>
+    <div class="familial filtrebordure flexrow">
+        <div class="logofiltre">Logo</div>
+        <p class="textfiltre">Familial</p>
+    </div>
+    <div class="romantique filtrebordure flexrow">
+        <div class="logofiltre">Logo</div>
+        <p class="textfiltre">Romantique</p>
+    </div>
+    <div class="animauxautorises filtrebordure flexrow">
+        <div class="logofiltre">Logo</div>
+        <p class="textfiltre">Animaux autorisés</p>
+    </div>
     </div>
 
     <div class="nblogements">
         <p>Plus de 500 logements sont disponibles dans cette ville</p>
     </div>
 
-    <div class="blochebergements">
+    <div class="blochebergements flexrow">
         <div class="blocville">
             <p>Hébergements à Marseille</p>
+            <div class="carre01">
+                <img class="imgheber" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
+                <p>Auberge de la Cannebière</p>
+                <p>Nuit à partir de 25€</p>
+                <p>LIGNE ETOILES</p>
+            </div>
         </div>
         <div class="blocpopulaire">
             <p>Les plus populaires</p>
