--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
 </head>
 
 <body>
-    <div class="header flexrow">
+    <div class="header flex-row">
         <div class="logo">
             <img class="logo" src="./images/logo/Reservia@3x.png" alt="logo">
         </div>
-        <div class="liens flexrow raleway">
+        <div class="liens flex-row raleway">
             <p class="hebergement hover">Hébergements</p>
             <p class="activite hover">Activités</p>
             <p class="inscription hover">S'inscrire</p>
         </div>
     </div>
 
-    <div class="trouverheber">
-        <div class="midtext">
+    <div class="trouver-heber">
+        <div class="mid-text">
             <p class="bold">Trouvez votre hébergement pour des vacances de rêve</p>
             <p>En plein centre ville ou pleine nature</p>
         </div>
-        <div class="recherche flexrow">
-            <div class="rech flexrow">
+        <div class="recherche flex-row">
+            <div class="rech flex-row">
                 <div class="icone"><img class="loc" src="./images/png-clipart-computer-icons-location-google-maps-location-icon-black-map.png" alt=""></div>
                 <input class="input" type="text">
                 <button class="btn">Rechercher</button>
@@ -36,55 +36,55 @@
 
     <div class="filtre">
     <p class="raleway">Filtres</p>
-    <div class="economique filtrebordure flexrow">
-        <div class="logofiltre">Logo</div>
-        <p class="textfiltre">Economique</p>
+    <div class="economique filtre-bordure flex-row">
+        <div class="logo-filtre">Logo</div>
+        <p class="text-filtre">Economique</p>
     </div>
-    <div class="familial filtrebordure flexrow">
-        <div class="logofiltre">Logo</div>
-        <p class="textfiltre">Familial</p>
+    <div class="familial filtre-bordure flex-row">
+        <div class="logo-filtre">Logo</div>
+        <p class="text-filtre">Familial</p>
     </div>
-    <div class="romantique filtrebordure flexrow">
-        <div class="logofiltre">Logo</div>
-        <p class="textfiltre">Romantique</p>
+    <div class="romantique filtre-bordure flex-row">
+        <div class="logo-filtre">Logo</div>
+        <p class="text-filtre">Romantique</p>
     </div>
-    <div class="animauxautorises filtrebordure flexrow">
-        <div class="logofiltre">Logo</div>
-        <p class="textfiltre">Animaux autorisés</p>
+    <div class="animaux-autorises filtr-bordure flex-row">
+        <div class="logo-filtre">Logo</div>
+        <p class="text-filtre">Animaux autorisés</p>
     </div>
     </div>
 
-    <div class="nblogements">
+    <div class="nb-logements">
         <p>Plus de 500 logements sont disponibles dans cette ville</p>
     </div>
 
-    <div class="blochebergements flexrow">
-        <div class="blocville">
+    <div class="bloc-hebergements flex-row">
+        <div class="bloc-ville">
             <p>Hébergements à Marseille</p>
-            <div class="carre01">
-                <img class="imgheber" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
+            <div class="carre-01">
+                <img class="img-heber" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
                 <p>Auberge de la Cannebière</p>
                 <p>Nuit à partir de 25€</p>
                 <p>LIGNE ETOILES</p>
             </div>
         </div>
-        <div class="blocpopulaire">
+        <div class="bloc-populaire">
             <p>Les plus populaires</p>
         </div>
     </div>
 
-    <div class="blocactivite">
+    <div class="bloc-activite">
         <p>Activités à Marseille</p>
     </div>
 
     <footer class="footer">
-        <div class="apropos">
+        <div class="a-propos">
             <p>A propos</p>
             <p>Fonctionnement du site</p>
             <p>Conditions générales de vente</p>
             <p>Données et confidentialité</p>
         </div>
-        <div class="noshebergements">
+        <div class="nos-hebergements">
             <p>Nos Hébergements</p>
             <p>Charte qualité</p>
             <p>Soumettre votre hôtel</p>
