ajout bloc hébergement et populaires

--- a/index.html
+++ b/index.html
@@ -61,15 +61,69 @@
     <div class="bloc-hebergements flex-row">
         <div class="bloc-ville">
             <p>Hébergements à Marseille</p>
-            <div class="carre-01">
-                <img class="img-heber" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
-                <p>Auberge de la Cannebière</p>
-                <p>Nuit à partir de 25€</p>
-                <p>LIGNE ETOILES</p>
+            <div class="flex-row justify-space-between">
+                <div class="carre-01">
+                    <img class="img-heber" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
+                    <p class="bold heber-txt">Auberge de la Cannebière</p>
+                    <p class="heber-txt">Nuit à partir de 25€</p>
+                    <p class="heber-txt">LIGNE ETOILES</p>
+                </div>
+                <div class="carre-01">
+                    <img class="img-heber" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
+                    <p class="bold heber-txt">Hôtel du port</p>
+                    <p class="heber-txt">Nuit à partir de 52€</p>
+                    <p class="heber-txt">LIGNE ETOILES</p>
+                </div>
+                <div class="carre-01">
+                    <img class="img-heber" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
+                    <p class="bold heber-txt">Hôtel les mouettes</p>
+                    <p class="heber-txt">Nuit à partir de 76€</p>
+                    <p class="heber-txt">LIGNE ETOILES</p>
+                </div>
+            </div>
+            <div class="flex-row justify-space-between">
+                <div class="carre-01">
+                    <img class="img-heber" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
+                    <p class="bold heber-txt">Hôtel de la mer</p>
+                    <p class="heber-txt">Nuit à partir de 46€</p>
+                    <p class="heber-txt">LIGNE ETOILES</p>
+                </div>
+                <div class="carre-01">
+                    <img class="img-heber" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
+                    <p class="bold heber-txt">Auberge Le Panier</p>
+                    <p class="heber-txt">Nuit à partir de 25€</p>
+                    <p class="heber-txt">LIGNE ETOILES</p>
+                </div>
+                <div class="carre-01">
+                    <img class="img-heber" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
+                    <p class="bold heber-txt">Hôtel chez Amina</p>
+                    <p class="heber-txt">Nuit à partir de 25€</p>
+                    <p class="heber-txt">LIGNE ETOILES</p>
+                </div>
             </div>
         </div>
         <div class="bloc-populaire">
             <p>Les plus populaires</p>
+            <div class="justify-space-between">
+                <div class="carre-01">
+                    <img class="img-heber" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
+                    <p class="bold heber-txt">Auberge de la Cannebière</p>
+                    <p class="heber-txt">Nuit à partir de 25€</p>
+                    <p class="heber-txt">LIGNE ETOILES</p>
+                </div>
+                <div class="carre-01">
+                    <img class="img-heber" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
+                    <p class="bold heber-txt">Hôtel du port</p>
+                    <p class="heber-txt">Nuit à partir de 52€</p>
+                    <p class="heber-txt">LIGNE ETOILES</p>
+                </div>
+                <div class="carre-01">
+                    <img class="img-heber" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
+                    <p class="bold heber-txt">Hôtel les mouettes</p>
+                    <p class="heber-txt">Nuit à partir de 76€</p>
+                    <p class="heber-txt">LIGNE ETOILES</p>
+                </div>
+            </div>
         </div>
     </div>
 
