--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/04ed5bdc1f.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 
@@ -26,7 +27,7 @@
         </div>
         <div class="recherche flex-row">
             <div class="rech flex-row">
-                <div class="icone"><img class="loc" src="./images/png-clipart-computer-icons-location-google-maps-location-icon-black-map.png" alt=""></div>
+                <i class="fas fa-map-marker-alt margin-auto"></i></div>
                 <input class="input" type="text">
                 <button class="btn">Rechercher</button>
             </div>
@@ -36,20 +37,20 @@
 
     <div class="filtre">
     <p class="raleway">Filtres</p>
-    <div class="economique filtre-bordure flex-row">
-        <div class="logo-filtre">Logo</div>
+    <div class="familial filtre-bordure flex-row">
+        <div class="logo-filtre margin-auto"><i class="fas fa-money-bill-wave"></i></div>
         <p class="text-filtre">Economique</p>
     </div>
     <div class="familial filtre-bordure flex-row">
-        <div class="logo-filtre">Logo</div>
+        <div class="logo-filtre margin-auto"><i class="fas fa-male"></i></div>
         <p class="text-filtre">Familial</p>
     </div>
     <div class="romantique filtre-bordure flex-row">
-        <div class="logo-filtre">Logo</div>
+        <div class="logo-filtre margin-auto"><i class="fas fa-heart"></i></div>
         <p class="text-filtre">Romantique</p>
     </div>
-    <div class="animaux-autorises filtr-bordure flex-row">
-        <div class="logo-filtre">Logo</div>
+    <div class="animaux-autorises filtre-bordure flex-row">
+        <div class="logo-filtre margin-auto"><i class="fas fa-dog"></i></div>
         <p class="text-filtre">Animaux autorisés</p>
     </div>
     </div>
@@ -63,65 +64,66 @@
             <p>Hébergements à Marseille</p>
             <div class="flex-row justify-space-between">
                 <div class="carre-01">
-                    <img class="img-heber" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
+                    <img class="img-heber" src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
                     <p class="bold heber-txt">Auberge de la Cannebière</p>
                     <p class="heber-txt">Nuit à partir de 25€</p>
-                    <p class="heber-txt">LIGNE ETOILES</p>
+                    <p class="heber-txt stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star stars-grey"></i></p>
                 </div>
                 <div class="carre-01">
-                    <img class="img-heber" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
+                    <img class="img-heber" src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="">
                     <p class="bold heber-txt">Hôtel du port</p>
                     <p class="heber-txt">Nuit à partir de 52€</p>
-                    <p class="heber-txt">LIGNE ETOILES</p>
+                    <p class="heber-txt stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
                 </div>
                 <div class="carre-01">
-                    <img class="img-heber" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
+                    <img class="img-heber" src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="">
                     <p class="bold heber-txt">Hôtel les mouettes</p>
                     <p class="heber-txt">Nuit à partir de 76€</p>
-                    <p class="heber-txt">LIGNE ETOILES</p>
+                    <p class="heber-txt stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star stars-grey"></i></p>
                 </div>
             </div>
             <div class="flex-row justify-space-between">
                 <div class="carre-01">
-                    <img class="img-heber" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
+                    <img class="img-heber" src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="">
                     <p class="bold heber-txt">Hôtel de la mer</p>
                     <p class="heber-txt">Nuit à partir de 46€</p>
-                    <p class="heber-txt">LIGNE ETOILES</p>
+                    <p class="heber-txt stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star stars-grey"></i><i class="fas fa-star stars-grey"></i></p>
                 </div>
                 <div class="carre-01">
-                    <img class="img-heber" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
+                    <img class="img-heber" src="./images/hebergements/4_small//nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="">
                     <p class="bold heber-txt">Auberge Le Panier</p>
                     <p class="heber-txt">Nuit à partir de 25€</p>
-                    <p class="heber-txt">LIGNE ETOILES</p>
+                    <p class="heber-txt stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star stars-grey"></i></p>
                 </div>
                 <div class="carre-01">
                     <img class="img-heber" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
                     <p class="bold heber-txt">Hôtel chez Amina</p>
                     <p class="heber-txt">Nuit à partir de 25€</p>
-                    <p class="heber-txt">LIGNE ETOILES</p>
+                    <p class="heber-txt stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
                 </div>
             </div>
+            <p class="bold)">Afficher plus</p>
         </div>
         <div class="bloc-populaire">
             <p>Les plus populaires</p>
             <div class="justify-space-between">
                 <div class="carre-01">
                     <img class="img-heber" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
-                    <p class="bold heber-txt">Auberge de la Cannebière</p>
+                    <p class="bold heber-txt">Hôtel Le soleil du matin</p>
                     <p class="heber-txt">Nuit à partir de 25€</p>
-                    <p class="heber-txt">LIGNE ETOILES</p>
+                    <p class="heber-txt stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
                 </div>
                 <div class="carre-01">
                     <img class="img-heber" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
-                    <p class="bold heber-txt">Hôtel du port</p>
+                    <p class="bold heber-txt">Au coeur de l'eau Chambres d'hôtes</p>
                     <p class="heber-txt">Nuit à partir de 52€</p>
-                    <p class="heber-txt">LIGNE ETOILES</p>
+                    <p class="heber-txt stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star stars-grey"></i></p>
                 </div>
                 <div class="carre-01">
                     <img class="img-heber" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
-                    <p class="bold heber-txt">Hôtel les mouettes</p>
+                    <p class="bold heber-txt">Hôtel Tout bleu et Blanc</p>
                     <p class="heber-txt">Nuit à partir de 76€</p>
-                    <p class="heber-txt">LIGNE ETOILES</p>
+                    <p class="heber-txt stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star stars-grey"></i></p>
                 </div>
             </div>
         </div>
