finitions heber + popu + activité

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
@@ -28,31 +29,31 @@
         <div class="recherche flex-row">
             <div class="rech flex-row">
                 <i class="fas fa-map-marker-alt margin-auto"></i></div>
-                <input class="input" type="text">
-                <button class="btn">Rechercher</button>
-            </div>
+            <input class="input" type="text">
+            <button class="btn">Rechercher</button>
         </div>
+    </div>
     </div>
 
 
     <div class="filtre">
-    <p class="raleway">Filtres</p>
-    <div class="familial filtre-bordure flex-row">
-        <div class="logo-filtre margin-auto"><i class="fas fa-money-bill-wave"></i></div>
-        <p class="text-filtre">Economique</p>
-    </div>
-    <div class="familial filtre-bordure flex-row">
-        <div class="logo-filtre margin-auto"><i class="fas fa-male"></i></div>
-        <p class="text-filtre">Familial</p>
-    </div>
-    <div class="romantique filtre-bordure flex-row">
-        <div class="logo-filtre margin-auto"><i class="fas fa-heart"></i></div>
-        <p class="text-filtre">Romantique</p>
-    </div>
-    <div class="animaux-autorises filtre-bordure flex-row">
-        <div class="logo-filtre margin-auto"><i class="fas fa-dog"></i></div>
-        <p class="text-filtre">Animaux autorisés</p>
-    </div>
+        <p class="raleway">Filtres</p>
+        <div class="familial filtre-bordure flex-row">
+            <div class="logo-filtre margin-auto"><i class="fas fa-money-bill-wave"></i></div>
+            <p class="text-filtre">Economique</p>
+        </div>
+        <div class="familial filtre-bordure flex-row">
+            <div class="logo-filtre margin-auto"><i class="fas fa-male"></i></div>
+            <p class="text-filtre">Familial</p>
+        </div>
+        <div class="romantique filtre-bordure flex-row">
+            <div class="logo-filtre margin-auto"><i class="fas fa-heart"></i></div>
+            <p class="text-filtre">Romantique</p>
+        </div>
+        <div class="animaux-autorises filtre-bordure flex-row">
+            <div class="logo-filtre margin-auto"><i class="fas fa-dog"></i></div>
+            <p class="text-filtre">Animaux autorisés</p>
+        </div>
     </div>
 
     <div class="nb-logements">
@@ -62,68 +63,102 @@
     <div class="bloc-hebergements flex-row">
         <div class="bloc-ville">
             <p>Hébergements à Marseille</p>
-            <div class="flex-row justify-space-between">
+            <div class="heber-box flex-row justify-space-between">
                 <div class="carre-01">
-                    <img class="img-heber" src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
+                    <img class="img-content" src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                        alt="">
                     <p class="bold heber-txt">Auberge de la Cannebière</p>
                     <p class="heber-txt">Nuit à partir de 25€</p>
-                    <p class="heber-txt stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star stars-grey"></i></p>
+                    <p class="heber-txt stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                            class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star stars-grey"></i>
+                    </p>
                 </div>
                 <div class="carre-01">
-                    <img class="img-heber" src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="">
+                    <img class="img-content" src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                        alt="">
                     <p class="bold heber-txt">Hôtel du port</p>
                     <p class="heber-txt">Nuit à partir de 52€</p>
-                    <p class="heber-txt stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+                    <p class="heber-txt stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                            class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
                 </div>
                 <div class="carre-01">
-                    <img class="img-heber" src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="">
+                    <img class="img-content" src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                        alt="">
                     <p class="bold heber-txt">Hôtel les mouettes</p>
                     <p class="heber-txt">Nuit à partir de 76€</p>
-                    <p class="heber-txt stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star stars-grey"></i></p>
+                    <p class="heber-txt stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                            class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star stars-grey"></i>
+                    </p>
                 </div>
-            </div>
-            <div class="flex-row justify-space-between">
-                <div class="carre-01">
-                    <img class="img-heber" src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="">
+                <div class="carre-01 margin-top">
+                    <img class="img-content" src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                        alt="">
                     <p class="bold heber-txt">Hôtel de la mer</p>
                     <p class="heber-txt">Nuit à partir de 46€</p>
-                    <p class="heber-txt stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star stars-grey"></i><i class="fas fa-star stars-grey"></i></p>
+                    <p class="heber-txt stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                            class="fas fa-star"></i><i class="fas fa-star stars-grey"></i><i
+                            class="fas fa-star stars-grey"></i></p>
                 </div>
-                <div class="carre-01">
-                    <img class="img-heber" src="./images/hebergements/4_small//nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="">
+                <div class="carre-01 margin-top">
+                    <img class="img-content" src="./images/hebergements/4_small//nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                        alt="">
                     <p class="bold heber-txt">Auberge Le Panier</p>
                     <p class="heber-txt">Nuit à partir de 25€</p>
-                    <p class="heber-txt stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star stars-grey"></i></p>
+                    <p class="heber-txt stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                            class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star stars-grey"></i>
+                    </p>
                 </div>
-                <div class="carre-01">
-                    <img class="img-heber" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
+                <div class="carre-01 margin-top">
+                    <img class="img-content" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                        alt="">
                     <p class="bold heber-txt">Hôtel chez Amina</p>
                     <p class="heber-txt">Nuit à partir de 25€</p>
-                    <p class="heber-txt stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+                    <p class="heber-txt stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                            class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
                 </div>
             </div>
             <p class="bold)">Afficher plus</p>
         </div>
         <div class="bloc-populaire">
             <p>Les plus populaires</p>
-            <div class="justify-space-between">
-                <div class="carre-01">
-                    <img class="img-heber" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
-                    <p class="bold heber-txt">Hôtel Le soleil du matin</p>
-                    <p class="heber-txt">Nuit à partir de 25€</p>
-                    <p class="heber-txt stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+            <div class="justify-space-between flex-column">
+                <div class="carre-02">
+                    <img class="img-popu" src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                        alt="">
+                    <div class="text-02">
+                        <p class="bold heber-txt">Hôtel Le soleil du matin</p>
+                        <p class="heber-txt">Nuit à partir de 25€</p>
+                        <p class="heber-txt stars stars-popu"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+                    </div>
                 </div>
-                <div class="carre-01">
-                    <img class="img-heber" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
-                    <p class="bold heber-txt">Au coeur de l'eau Chambres d'hôtes</p>
-                    <p class="heber-txt">Nuit à partir de 52€</p>
-                    <p class="heber-txt stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star stars-grey"></i></p>
+                <div class="carre-02 margin-top">
+                    <img class="img-popu" src="./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                        alt="">
+                    <div class="text-02">
+                        <p class="bold heber-txt">Au coeur de l'eau Chambres d'hôtes</p>
+                        <p class="heber-txt">Nuit à partir de 52€</p>
+                        <p class="heber-txt stars stars-popu"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                class="fas fa-star stars-grey"></i></p>
+                    </div>
                 </div>
-                <div class="carre-01">
-                    <img class="img-heber" src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
-                    <p class="bold heber-txt">Hôtel Tout bleu et Blanc</p>
-                    <p class="heber-txt">Nuit à partir de 76€</p>
-                    <p class="heber-txt stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star stars-grey"></i></p>
+                <div class="carre-02 margin-top">
+                    <img class="img-popu" src="./images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                        alt="">
+                    <div class="text-02">
+                        <div class="text-03">
+
+                            <p class="bold heber-txt">Hôtel Tout bleu et Blanc</p>
+                            <p class="heber-txt">Nuit à partir de 76€</p>
+                        </div>
+                        <div class="stars-popu">
+
+                            <p class="heber-txt stars stars-popu"><i class="fas fa-star"></i><i
+                                    class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                    class="fas fa-star stars-grey"></i></p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -131,27 +166,61 @@
 
     <div class="bloc-activite">
         <p>Activités à Marseille</p>
-    </div>
+        <div class="box-activite flex-row">
+            <div class="box-high box-general"><img class="img-port border-radius"
+                    src="./images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="">
+                <p class="bold text-acti">Vieux Port</p>
+            </div>
+            <div class="double-box flex-column">
+                <div class="box-fort box-general"><img class="img-fort border-radius"
+                        src="./images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="">
+                    <p class="bold text-acti">Fort de Pomègues</p>
+                </div>
+                <div class="box-iles box-general"><img class="img-iles border-radius"
+                        src="./images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="">
+                    <p class="bold text-acti">Iles de Frioul</p>
+                </div>
+            </div>
+            <div class="box-high box-general"><img class="img-parc border-radius"
+                    src="./images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="">
+                <p class="bold text-acti">Parc National des Calanques</p>
+            </div>
+            <div class="double-box flex-column">
+                <div class="box-dame box-general"><img class="img-dame border-radius"
+                        src="./images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="">
+                    <p class="bold text-acti">Notre-Dame-de-la-Garde</p>
+                </div>
+                <div class="box-longchamp box-general"><img class="img-longchamp border-radius"
+                        src="./images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="">
+                    <p class="bold text-acti">Parc Longchamp</p>
+                </div>
+            </div>
+        </div>
 
+    </div>
+    <!-- Mettre liens avec # pour tous les liens -->
     <footer class="footer">
-        <div class="a-propos">
-            <p>A propos</p>
-            <p>Fonctionnement du site</p>
-            <p>Conditions générales de vente</p>
-            <p>Données et confidentialité</p>
-        </div>
-        <div class="nos-hebergements">
-            <p>Nos Hébergements</p>
-            <p>Charte qualité</p>
-            <p>Soumettre votre hôtel</p>
-        </div>
-        <div class="assistance">
-            <p>Assistance</p>
-            <p>Centre d'aide</p>
-            <p>Nous contacter</p>
+        <div class="columns">
+            <div class="link-box flex-column">
+                <p class="bold">A propos</p>
+                <a class="link" href="#">Fonctionnement du site</a>
+                <a class="link" href="#">Conditions générales de vente</a>
+                <a class="link" href="#">Données et confidentialité</a>
+            </div>
+            <div class="link-box flex-column">
+                <p class="bold">Nos Hébergements</p>
+                <a class="link" href="#">Charte qualité</a>
+                <a class="link" href="#">Soumettre votre hôtel</a>
+            </div>
+            <div class="link-box flex-column">
+                <p class="bold">Assistance</p>
+                <a class="link" href="#">Centre d'aide</a>
+                <a class="link" href="#">Nous contacter</a>
+            </div>
         </div>
     </footer>
-    
-    
+
+
 </body>
+
 </html>
